Fix light grey colour contrast issues on contact page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1692,7 +1692,7 @@ body {
 }
 .cid-rgDtXICFi7 .nav-link:hover,
 .cid-rgDtXICFi7 .dropdown-item:hover {
-  color: #767676 !important;
+  color: #4A4A4A !important;
 }
 .cid-rgE1IHAUk3 {
   background-image: url("../../../assets/images/lisa-woakes-697094-unsplash-2000x1333.jpg");
@@ -1745,7 +1745,7 @@ body {
   padding-top: 1.5rem;
 }
 .cid-rgEeWAbpLh .mbr-text {
-  color: #767676;
+  color: #4A4A4A;
 }
 .cid-rgEeWAbpLh .card-wrapper {
   height: 100%;
@@ -1831,7 +1831,7 @@ body {
   font-weight: 500;
 }
 .cid-rgE26LW7Eg p {
-  color: #767676;
+  color: #4A4A4A;
   text-align: left;
 }
 .cid-rgE26LW7Eg .aside-content {
@@ -1891,7 +1891,7 @@ body {
   text-align: left;
 }
 .cid-rgEk2t7Nbr p {
-  color: #767676;
+  color: #4A4A4A;
   text-align: left;
 }
 .cid-rgEk2t7Nbr .card-box {
@@ -1906,7 +1906,7 @@ body {
   background-color: #ffffff;
 }
 .cid-rgEtybHeIY .mbr-section-subtitle {
-  color: #767676;
+  color: #4A4A4A;
 }
 .cid-rgEtybHeIY .formoid {
   margin: auto;
@@ -2018,7 +2018,7 @@ body {
   height: 6rem;
 }
 .cid-rgEtsjH4gN .mbr-text {
-  color: #767676;
+  color: #4A4A4A;
 }
 @media (max-width: 767px) {
   .cid-rgEtsjH4gN .footer-lower .copyright {
@@ -2466,7 +2466,7 @@ body {
 }
 .cid-rgGgREL60O .nav-link:hover,
 .cid-rgGgREL60O .dropdown-item:hover {
-  color: #767676 !important;
+  color: #4A4A4A !important;
 }
 .cid-rgGgRGAB0A {
   padding-top: 120px;
@@ -2500,7 +2500,7 @@ body {
   padding-top: 1.5rem;
 }
 .cid-rgLBuPZXbX .mbr-text {
-  color: #767676;
+  color: #4A4A4A;
 }
 .cid-rgLBuPZXbX .card-wrapper {
   height: 100%;
@@ -2522,7 +2522,7 @@ body {
   margin-bottom: 2rem;
 }
 .cid-rgGgRLPwMX .mbr-section-subtitle {
-  color: #767676;
+  color: #4A4A4A;
 }
 .cid-rgGgRLPwMX a:not([href]):not([tabindex]) {
   color: #fff;
@@ -2551,7 +2551,7 @@ body {
   text-align: left;
 }
 .cid-rgGgRNwIen p {
-  color: #767676;
+  color: #4A4A4A;
   text-align: left;
 }
 .cid-rgGgRNwIen .card-box {
@@ -2579,7 +2579,7 @@ body {
   height: 6rem;
 }
 .cid-rgGgRPqPpj .mbr-text {
-  color: #767676;
+  color: #4A4A4A;
 }
 @media (max-width: 767px) {
   .cid-rgGgRPqPpj .footer-lower .copyright {
